--- a/ios/medicoconsultor.xcodeproj/xcshareddata/xcschemes/medicoconsultor.xcscheme
+++ b/ios/medicoconsultor.xcodeproj/xcshareddata/xcschemes/medicoconsultor.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "medicoconsultor.app"
+               BuildableName = "Me&#x301;dico Consultor HMG.app"
                BlueprintName = "medicoconsultor"
                ReferencedContainer = "container:medicoconsultor.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "medicoconsultor.app"
+            BuildableName = "Me&#x301;dico Consultor HMG.app"
             BlueprintName = "medicoconsultor"
             ReferencedContainer = "container:medicoconsultor.xcodeproj">
          </BuildableReference>
@@ -92,7 +92,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "medicoconsultor.app"
+            BuildableName = "Me&#x301;dico Consultor HMG.app"
             BlueprintName = "medicoconsultor"
             ReferencedContainer = "container:medicoconsultor.xcodeproj">
          </BuildableReference>
@@ -109,7 +109,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "medicoconsultor.app"
+            BuildableName = "Me&#x301;dico Consultor HMG.app"
             BlueprintName = "medicoconsultor"
             ReferencedContainer = "container:medicoconsultor.xcodeproj">
          </BuildableReference>
