--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/netinfo": "^3.2.0",
     "axios": "^0.19.0",
     "core-js": "^3.1.3",
+    "jetifier": "^1.6.5",
     "joi": "^14.3.1",
     "lodash": "^4.17.14",
     "moment": "^2.24.0",
